# project_GPT

./: CMakeLists.txt
data/: example.fasta
src/: FastaFile.h  FastaFormat.h  FastaHeader.h  FastaParser.cpp  FastaParser.h  Nucleotide.h  Sequence.h  main.cpp
